--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/vishnu-dev/vishnu-dev.github.io/issues"
   },
-  "homepage": "https://github.com/vishnu-dev/vishnu-dev.github.io#readme"
+  "homepage": "https://github.com/vishnu-dev/vishnu-dev.github.io#readme",
+  "dependencies": {
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0"
+  }
 }
