Upgraded all packages with react

--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "private": true,
   "homepage": "http://vishnu-dev.github.io/",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.6",
+    "@mui/styles": "^5.2.3",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
+    "audit": "^0.0.6",
+    "fix": "^0.0.6",
     "framer-motion": "^4.0.3",
     "highcharts": "^9.0.1",
     "highcharts-react-official": "^3.0.0",
-    "react": "^16.14.0",
+    "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
     "react-grid-gallery": "^0.5.5",
+    "react-instagram-embed": "^3.0.0",
     "react-lazy-load-image-component": "^1.5.1",
-    "react-particles-js": "^3.4.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^5.0.0",
     "react-scroll-percentage": "^4.2.0",
     "react-social-icons": "^5.0.0",
+    "react-tsparticles": "^1.38.0",
     "react-vertical-timeline-component": "^3.3.3",
     "react-waypoint": "^9.0.3",
     "sass": "^1.32.8",
