--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vishnu-dev.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://vishnu-dev.github.io/",
+  "homepage": "https://vishnudev.in/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -11,17 +11,12 @@
     "@mui/styles": "^5.2.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "audit": "^0.0.6",
-    "fix": "^0.0.6",
-    "framer-motion": "^4.0.3",
-    "highcharts": "^9.0.1",
-    "highcharts-react-official": "^3.0.0",
+    "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-card-flip": "^1.1.5",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
-    "react-grid-gallery": "^0.5.5",
-    "react-instagram-embed": "^3.0.0",
     "react-lazy-load-image-component": "^1.5.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
@@ -29,11 +24,10 @@
     "react-scroll-percentage": "^4.2.0",
     "react-social-icons": "^5.0.0",
     "react-tsparticles": "^1.38.0",
-    "react-vertical-timeline-component": "^3.3.3",
-    "react-waypoint": "^9.0.3",
+    "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.32.8",
-    "simple-react-lightbox": "3.3.3",
-    "typed.js": "^2.0.11"
+    "simple-react-lightbox": "3.5.5",
+    "typed.js": "^2.0.12"
   },
   "scripts": {
     "start": "react-scripts start",
