--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://vishnudev.in/",
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.6",
+    "@mui/material": "^5.7.0",
     "@mui/styles": "^5.2.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-card-flip": "^1.1.5",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
     "react-lazy-load-image-component": "^1.5.1",
@@ -23,10 +24,12 @@
     "react-scripts": "^5.0.0",
     "react-scroll-percentage": "^4.2.0",
     "react-social-icons": "^5.0.0",
-    "react-tsparticles": "^1.38.0",
+    "react-tsparticles": "^1.43.1",
     "react-vertical-timeline-component": "^3.5.2",
     "sass": "^1.32.8",
     "simple-react-lightbox": "3.5.5",
+    "swiper": "^8.1.4",
+    "tsparticles": "^2.0.6",
     "typed.js": "^2.0.12"
   },
   "scripts": {
