--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "homepage": "https://vishnudev.in/",
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.7.0",
+    "@mui/material": "^5.11.13",
     "@mui/styles": "^5.2.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
@@ -19,18 +19,20 @@
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
     "react-lazy-load-image-component": "^1.5.1",
-    "react-photo-gallery": "^8.0.0",
-    "react-router-dom": "^5.2.0",
+    "react-photo-album": "^2.0.3",
+    "react-router-dom": "^5.3.4",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.0",
     "react-scroll-percentage": "^4.2.0",
     "react-social-icons": "^5.0.0",
     "react-tsparticles": "^1.43.1",
-    "react-vertical-timeline-component": "^3.5.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.32.8",
     "simple-react-lightbox": "3.5.5",
-    "swiper": "^8.1.4",
+    "swiper": "^9.1.0",
     "tsparticles": "^2.0.6",
-    "typed.js": "^2.0.12"
+    "typed.js": "^2.0.12",
+    "yet-another-react-lightbox": "^2.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
