Updated motion elements; Added Morphy to list of projects with some more functionality;

--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "@mui/styles": "^5.2.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^6.5.1",
     "react": "^17.0.2",
-    "react-card-flip": "^1.1.5",
     "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-graph-vis": "^1.0.7",
@@ -24,13 +23,14 @@
     "react-scripts": "^5.0.0",
     "react-scroll-percentage": "^4.2.0",
     "react-social-icons": "^5.0.0",
-    "react-tsparticles": "^1.43.1",
+    "react-tsparticles": "^2.9.3",
     "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.32.8",
     "simple-react-lightbox": "3.5.5",
     "swiper": "^9.1.0",
-    "tsparticles": "^2.0.6",
-    "typed.js": "^2.0.12",
+    "tsparticles": "^2.9.3",
+    "tsparticles-engine": "^2.9.3",
+    "typed.js": "^2.0.13",
     "yet-another-react-lightbox": "^2.6.2"
   },
   "scripts": {
